style.css
/*Navigation*/

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #e6edf7;
  height: 9.6rem;
  padding: 0 4.8rem;
}

.logo {
  height: 2.4rem;
}

.btn-mobile-nav {
  border: none;
  background: none;
  cursor: pointer;
  display: none;
}
.icon-mobile-nav {
  height: 4.8rem;
  width: 4.8rem;
  color: #333;
}

.icon-mobile-nav[name="close-outline"] {
  display: none;
}

.nav-list {
  display: flex;
  gap: 4.8rem;
  align-items: center;
}

.nav-list li {
  list-style: none;
}

.nav-list .nav-link:link,
.nav-list .nav-link:visited {
  text-decoration: none;
  font-weight: 500;
  font-size: 1.8rem;
  color: #333;
  transition: all 0.3s;
}

.nav-list .nav-link-cta:link,
.nav-list .nav-link-cta:visited {
  display: inline-block;
  padding: 1.2rem 2.4rem;
  background-color: #004aad;
  color: #fff;
  border-radius: 9px;
}

.nav-list .nav-link:hover,
.nav-list .nav-link:active {
  color: #004aad;
}

.nav-list .nav-link-cta:hover,
.nav-list .nav-link-cta:active {
  color: #fff;
}

.sticky .header {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 8rem;
  padding-block: 0;
  background-color: rgba(255, 255, 255, 0.9);
  z-index: 999;
  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
}

.sticky .section-hero {
  margin-top: 9.6rem;
}

/*Hero Section*/
.hero {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  max-width: 130rem;
  gap: 9.6rem;
  padding: 3.2rem;
}

.hero-image {
  width: 100%;
}

.section-hero {
  background-color: #e6edf7;
  padding: 4.8rem 0 9.6rem 0;
}

.hero-description {
  font-size: 2rem;
  line-height: 1.6;
  margin-bottom: 4.8rem;
}

.customers-box {
  margin-top: 80px;
  display: flex;
  align-items: center;
  gap: 0.8rem;
}

.customer-images-box {
  display: flex;
}

.customer-images-box img {
  height: 3.6rem;
  width: 3.6rem;
  border-radius: 50%;
  margin-right: -1.6rem;
  border: 3px solid #e6edf7;
}

.customer-images-box img:last-child {
  margin-right: 0;
}

.customer-experience {
  font-size: 1.8rem;
  font-weight: 600;
}

.customer-experience span {
  color: #00439c;
}

/*Section how*/
.section-how {
  padding: 9.6rem 0;
}

.step-number {
  font-size: 8.6rem;
  font-weight: 600;
  color: #ddd;
  margin-bottom: 1.2rem;
}

.step-description {
  font-size: 1.8rem;
  line-height: 1.6;
}

.img-box {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.step-image {
  width: 40%;
}

.img-box::before {
  position: absolute;
  content: "";
  display: block;
  width: 70%;
  background-color: #e6edf7;
  padding-bottom: 70%;
  border-radius: 50%;
  z-index: -2;
}

.img-box::after {
  position: absolute;
  content: "";
  display: block;
  width: 55%;
  background-color: #ccdbef;
  padding-bottom: 55%;
  border-radius: 50%;
  z-index: -1;
}

/*Project Section*/

.project-section {
  padding: 9.6rem 0;
}

.project {
  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.07);
  border-radius: 11px;
  overflow: hidden;
}

.project:hover {
  transform: translateY(-1.2rem);
  transition: all 0.3s;
}

.project-content {
  padding: 3.2rem 4.8rem;
}

.project-image {
  width: 100%;
}

.project-tags {
  margin-bottom: 1.2rem;
}

.tag {
  display: inline-block;
  padding: 0.4rem 0.8rem;
  font-size: 1.2rem;
  text-transform: uppercase;
  background-color: #59e00a;
  font-weight: 600;
  color: #333;
  border-radius: 9px;
}

.tag-js {
  display: inline-block;
  padding: 0.4rem 0.8rem;
  font-size: 1.2rem;
  text-transform: uppercase;
  background-color: #f6ad04;
  font-weight: 600;
  color: #333;
  border-radius: 9px;
}

.project-heading {
  font-size: 2.4rem;
  color: #333;
  font-weight: 600;
  margin-bottom: 3.2rem;
}

.project-data {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.project-detail {
  font-size: 1.8rem;
  display: flex;
  align-items: center;
  gap: 1.6rem;
}

.project-detail-data {
  line-height: 1.6;
}

.project-icon {
  color: #004aad;
  height: 2.4rem;
  width: 2.4rem;
}

.all-projects {
  text-align: center;
  font-size: 1.8rem;
}

.text-align-center {
  text-align: center;
}

/*Testimonials section*/

.section-testimonials {
  background-color: #e6edf7;
  display: grid;
  grid-template-columns: 55fr 45fr;
  align-items: center;
}

.testimonials-container {
  padding: 9.6rem;
}

.testimonials {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 4.8rem;
}

.testimonial-image {
  width: 6.4rem;
  border-radius: 50%;
  margin-bottom: 1.2rem;
}

.textimonial-text {
  font-size: 1.8rem;
  line-height: 3.2rem;
  margin-bottom: 1.6rem;
}

.testimonial-name {
  color: #6f6f6f;
  font-size: 1.6rem;
}

.testimonials-gallery {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.6rem;
  padding: 1.6rem;
}

.gallery-item {
  overflow: hidden;
}

.gallery-image {
  display: block;
  width: 100%;
  transition: all 0.3s;
}

.gallery-image:hover {
  transform: scale(1.1);
}

/*Section Pricing*/
.section-pricing {
  padding: 9.6rem 0;
}

.pricing-plan {
  border-radius: 11px;
  padding: 4.8rem;
  width: 75%;
}

.pricing-plan--starter {
  justify-self: end;
  border: 2px solid #e6edf7;
  padding: 4.6rem;
}
.pricing-plan--premium {
  position: relative;
  justify-self: start;
  background-color: #e6edf7;
  overflow: hidden;
}

.pricing-plan--premium::after {
  content: "Best Value";
  position: absolute;
  text-transform: uppercase;
  font-size: 1.4rem;
  font-weight: 700;
  top: 33px;
  right: -40px;
  background-color: #ffd43b;
  padding: 0.8rem 4.8rem;
  color: #333;
  transform: rotate(45deg);
}

.pricing-heading {
  text-align: center;
  margin-bottom: 4.8rem;
}
.plan-name {
  color: #004aad;
  font-weight: 600;
  font-size: 2rem;
  letter-spacing: 0.75px;
  text-transform: uppercase;
  margin-bottom: 3.2rem;
}
.plan-price {
  font-size: 6.2rem;
  font-weight: 600;
  color: #333;
  margin-bottom: 2.4rem;
}

.plan-price span {
  font-size: 3rem;
  font-weight: 500;
  margin-right: 0.8rem;
}

.plan-text {
  font-size: 1.6rem;
  line-height: 1.6;
  color: #6f6f6f;
}

.plan-sign-up {
  text-align: center;
  margin-top: 4.8rem;
}

.plan-details {
  font-size: 1.6rem;
  line-height: 1.6;
  text-align: center;
}

.feature-icon {
  height: 2.8rem;
  width: 2.8rem;
  color: #004aad;
  margin-bottom: 3.2rem;
  background-color: #e6edf7;
  padding: 1.6rem;
  border-radius: 50%;
}
.code-feature-heading {
  font-size: 2.4rem;
  font-weight: 600;
  margin-bottom: 1.6rem;
  color: #333;
}
.feature-text {
  font-size: 1.8rem;
  line-height: 1.8;
  color: #6f6f6f;
}

/*Section CTA*/

.section-cta {
  padding: 9.6rem 0 12.8rem;
}

.cta {
  display: grid;
  grid-template-columns: 2fr 1fr;
  background-image: linear-gradient(to right bottom, #004badeb, #0079b9);
  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.015);
  border-radius: 11px;
  overflow: hidden;
  padding: 0;
  margin: 0 3.2rem;
}

.cta-text-box {
  color: #001634;
  padding: 4.8rem;
}

.cta-text-box .heading-secondary {
  color: inherit;
  margin-bottom: 3.2rem;
}

.cta-text {
  font-size: 1.8rem;
  line-height: 1.8;
  margin-bottom: 4.8rem;
}

.cta-form {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 3.2rem;
  row-gap: 2.4rem;
}

.cta-form label {
  display: block;
  font-size: 1.8rem;
  font-weight: 500;
  margin-bottom: 1.2rem;
}
.cta-form input,
.cta-form select {
  width: 100%;
  padding: 1.2rem 1.6rem;
  font-size: 1.6rem;
  font-family: inherit;
  color: inherit;
  border: none;
  background-color: #e6edf7;
  border-radius: 9px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
}

.cta-form::placeholder {
  color: #888;
}

.cta-form input:focus,
.cta-form select:focus,
.cta-form button:focus {
  box-shadow: 0 0 0 0.8rem rgba(230, 237, 247, 0.5);
}

.cta-form button {
  border: none;
  cursor: pointer;
  font-family: inherit;
  background-color: #001634;
  color: #fff;
  align-self: end;
  padding: 1.2rem 1.6rem;
}

.cta-form button:hover {
  color: #001634;
  background-color: #fff;
}

.cta-image-box {
  background-image: linear-gradient(
      to right bottom,
      rgba(0, 75, 173, 0.35),
      rgba(0, 120, 185, 0.15)
    ),
    url("/04-project-code_premium/img/appointment.png");
  background-size: cover;
  background-position: center;
}

/*footer*/
.footer {
  padding: 12.8rem 0;
  border-top: 1px solid #eee;
}

.grid--footer {
  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
}

.logo-col {
  display: flex;
  flex-direction: column;
}

.footer-logo {
  display: block;
  margin-bottom: 3.2rem;
}

.social-links {
  display: flex;
  gap: 2.4rem;
  list-style: none;
}

.social-icon {
  height: 2.4rem;
  width: 2.4rem;
}

.copyright {
  font-size: 1.4rem;
  color: #767676;
  line-height: 1.6;
  margin-top: auto;
}

.footer-heading {
  font-size: 1.8rem;
  font-weight: 500;
  margin-bottom: 3.2rem;
}

.contacts {
  font-style: normal;
  font-size: 1.6rem;
  line-height: 1.6;
}

.contacts p {
  margin-bottom: 1.6rem;
}

.footer-navigation {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 3.6rem;
}

.footer-link:link,
.footer-link:visited {
  text-decoration: none;
  font-size: 1.6rem;
  color: #767676;
  transition: all 0.3s;
  line-height: 1.6;
}

.footer-link:hover,
.footer-link:active {
  color: #555;
}

